build: 修改gradle依赖管理