@@ -8,7 +8,7 @@ plugins {
 
 java {
     sourceCompatibility = '21'
-    targetCompatibility = '17'
+    targetCompatibility = '21'
 }
 
 group = 'com.nmz'
@@ -31,16 +31,28 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
 subprojects {
 
     apply plugin: 'java'
     apply plugin: 'idea'
+    apply plugin: 'org.springframework.boot'
     // spring统一依赖管理
     apply plugin: 'io.spring.dependency-management'
 
     /**
      * 避免出现idea中可以运行，编译报错：程序包xxx不存在
-     * https://blog.csdn.net/li295214001/article/details/88942082
      */
     jar {
         enabled = true
@@ -50,13 +62,48 @@ subprojects {
         enabled = true
     }
 
-    sourceCompatibility = 17
-    targetCompatibility = 17
+    sourceCompatibility = 21
+    targetCompatibility = 21
 
     // java编译的时候缺省状态下会因为中文字符而失败
     [compileJava,compileTestJava,javadoc]*.options*.encoding = 'UTF-8'
 
     dependencies {
+        implementation group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-nacos-discovery', version: '2022.0.0.0'
+        implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+        implementation 'org.springframework.boot:spring-boot-starter-security'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation group: 'p6spy', name: 'p6spy', version: '3.9.1'
+        implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.1.4'
+        implementation group: 'com.querydsl', name: 'querydsl-core', version: '5.0.0'
+        implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '5.0.0', classifier: 'jakarta'
+        implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+        implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
+
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+
+        runtimeOnly 'com.mysql:mysql-connector-j'
+
+        annotationProcessor 'org.projectlombok:lombok'
+        annotationProcessor group: 'com.querydsl', name: 'querydsl-apt', version: '5.0.0', classifier: 'jakarta'
+        annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
+    tasks.withType(JavaCompile).configureEach {
+        options.compilerArgs += "--enable-preview"
+    }
+
+    tasks.withType(Test).configureEach {
+        jvmArgs += "--enable-preview"
+    }
+
+    tasks.withType(JavaExec).configureEach {
+        jvmArgs += "--enable-preview"
+    }
 }
